force-app/main/default/objects/UserModule__c/UserModule__c.object-meta.xml
<CustomObject>
    <label>UserModule</label>
    <nameField>
        <label>UserModule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserModules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>