force-app/main/default/objects/UserModule__c/fields/ModuleProgress__c.field-meta.xml
<CustomField>
    <fullName>ModuleProgress__c</fullName>
    <formula>(UserUnitQuantity__c * 100)/ Module__r.UnitQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ModuleProgress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>