force-app/main/default/objects/UserModule__c/fields/TotalPoints__c.field-meta.xml
<CustomField>
    <fullName>TotalPoints__c</fullName>
    <label>TotalPoints</label>
    <summarizedField>UserUnit__c.Points__c</summarizedField>
    <summaryForeignKey>UserUnit__c.UserModule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>