force-app/main/default/objects/UserModule__c/fields/UserUnitQuantity__c.field-meta.xml
<CustomField>
    <fullName>UserUnitQuantity__c</fullName>
    <label>UserUnitQuantity</label>
    <summaryForeignKey>UserUnit__c.UserModule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>